Java 17: Stream toList